# algorithms.com

./: .gitignore  Dockerfile  Features and Guidelines.txt  README.md  algorithms.com.txt  build_docs.sh  build_docs_html.sh  build_image.sh  db.sqlite3  deploy_site.sh  install.sh  install_tools.sh  pyproject.toml  repo2text.sh  run_container.sh  run_structurizr.sh  runserver.sh  setup_dependencies_mac.sh  setup_django.sh  tools.md  tools.sh  ТЗ1.1.docx
docs/: Features and Guidelines.txt  code_editor_features  code_guidelines.md  docs_readme.md  main_features.txt  menu_structure.txt  tools.md  tools.reST
docs/architecture/: structurizr_c4.py
docs/source/: conf.py  index.rst
documentation/: urls.py  views.py
documentation/sphinx/: code_editor_features.txt  menu_structure.txt
documentation/sphinx/source/: conf.py  tools.rst
documentation/sphinx_docs/source/: index.rst  tools.rst
documentation/templates/: architecture.html
documentation/templates/documentation/: architecture.html
project/: settings.py  urls.py
structurizr_workspace/: workspace.dsl  workspace.json
structurizr_workspace/.structurizr/index/: _1.cfe  _1.cfs  _1.si  _2.cfe  _2.cfs  _2.si  _3.cfe  _3.cfs  _3.si  _9.cfe  _9.cfs  _9.si  _n.cfe  _n.cfs  _n.si  segments_2  segments_3  segments_4  segments_a  segments_o
