[tool.poetry]
name = "algorithms.com"
version = "0.1.0"
description = ""
authors = ["kingofjazzpiano <mrkingofjazzpiano@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12,<4.0"
Django = "^5.1.2"
Sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
